added profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Joshua"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Just an engineer trying to figure stuff out"
   location         : "Pittsburgh, PA"
   employer         :
